# CICDTesting

./: pyproject.toml
.github/workflows/: main.yml  新規 テキスト ドキュメント.txt
poetry-demo/: 新規 テキスト ドキュメント.txt
