[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Shuji Shibata <shuji.shibata@siliconstudio.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
